--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,8 @@
 :root {
     box-sizing: border-box;
     --primary-color: #18191A;
-    --secondary-color: #3A3B3C;
+    --secondary-color: #3a3b3c;
+    --secondary-color-with-opac: rgba(58, 59, 60, 0.5);
     --tertiary-color: #242526;
     --primary-text: #E4E6EB;
     --secondary-text: #B0B3B8;
@@ -53,8 +54,31 @@ body {
     grid-area: 2 / 1 / 3 / 2;
     background-color: var(--tertiary-color);
     color: var(--primary-text);
+    padding: 0px 16px;
 }
 
 #project-container {
     grid-area: 2 / 2 / 3 / 3;
+    padding: 24px;
+    background-color: var(--primary-color);
+    color: var(--primary-text);
+}
+
+#project-todos-container {
+    display: flex;
+    flex-grow: 0;
+    gap: 50px;
+    flex-wrap: wrap;
+}
+
+.todo-container, #create-todo-container {
+    height: 300px;
+    width: 300px;
+    background-color: var(--secondary-color-with-opac);
+}
+
+#create-todo-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
